conformance/tests/mesh-ports.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mesh-split-v1
  namespace: gateway-conformance-mesh
spec:
  parentRefs:
  - kind: Service
    group: core
    name: echo-v1
    port: 80
  rules:
  - filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: X-Header-Set
          value: v1
    backendRefs:
    - name: echo-v1
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mesh-split-v2
  namespace: gateway-conformance-mesh
spec:
  parentRefs:
  - kind: Service
    group: core
    name: echo-v2
    port: 80
  rules:
  - filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: X-Header-Set
          value: v2
    backendRefs:
    - name: echo-v2
      port: 80
